# telegram-todo-bot

./: .env.example  .gitignore  Makefile  README.md  docker-compose-local.yaml  docker-compose.yaml  pyproject.toml  redis.conf  requirements.txt
TelegramBot/: __init__.py
bot/: bot.py
bot/config/: config.py
bot/handlers/: other_handlers.py  user_handlers.py
bot/keyboards/: main_kb.py  tasks_kb.py
bot/lexicon/: lexicon.py  lexicon_en.py  lexicon_ru.py
bot/models/: task.py  user.py
bot/repository/: __init__.py  engine.py
docker/: Dockerfile  Dockerfile.bot  RedisDockerfile  requirements.txt
docs/: README.md  postgres-db.dbm  to-do-activity-diagram.drawio
docs/sql/: init-postgres-db.sql
migrations/: env.py
migrations/versions/: 2023_08_13_0952-1e615f960fd5_init_migration.py  2023_08_18_1523-eea4d61cf2b2_user_migrations.py  2023_08_21_1622-5cc3a512fe51_added_model_event.py
scripts/: export-dep  start
src/: config.py  exceptions.py  logconfig.py  logging.json
src/bot/: __main__.py  dispatcher.py
src/bot/handlers/: callback.py  callback_factories.py  user_handlers.py
src/bot/keyboards/: __init__.py  add_task_kb.py  admin_kb.py  callback_factories.py  delete_task_kb.py  main_kb.py  main_menu.py  settings_kb.py  task_kb.py  tasks_kb.py
src/bot/menu/: menu.py
src/bot/middlewares/: __init__.py  database.py  stat.py  translator.py  user.py
src/bot/routers/: __init__.py  add_task.py  admin.py  base.py  delete_task.py  done_task.py  help.py  (+4 more)
src/db/: database.py  utils.py
src/lexicon/: __init__.py  lexicon.py  lexicon_en.py  lexicon_ru.py  translator.py
src/visualizer/: base.py  utils.py
(+27 files in other folders)
