[tool.poetry]
name = "telegram-todo-bot"
version = "0.1.0"
description = ""
authors = ["Egorov Mikhail"]
readme = "README.md"
packages = [{include = "telegram_todo_bot"}]

[tool.poetry.dependencies]
python = "^3.11"
aiogram = "^2.25.1"
python-dotenv = "^1.0.0"
setuptools = "^67.6.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
