[tool.poetry]
name = "telegram-todo-bot"
version = "0.1.0"
description = ""
authors = ["Egorov Mikhail"]
readme = "README.md"
packages = [{include = "telegram_todo_bot"}]

[tool.poetry.dependencies]
python = "^3.11"
python-dotenv = "^1.0.0"
setuptools = "^67.6.0"
environs = "^9.5.0"
aiogram = {version = "^3.0.0b7", allow-prereleases = true}
sqlalchemy = "^2.0.9"


[tool.poetry.group.dev.dependencies]
autopep8 = "^2.0.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
