[tool.poetry]
name = "telegram-todo-bot"
version = "0.1.0"
description = ""
authors = ["Egorov Mikhail"]
license = "Apache License 2.0"
readme = "README.md"
packages = [{include = "telegram_todo_bot"}]

[tool.poetry.dependencies]
python = "^3.11"
python-dotenv = "^1.0.0"
setuptools = "^67.6.0"
environs = "^9.5.0"
aiogram = {version = "^3.0.0b7", allow-prereleases = true}
redis = "^4.5.4"
fluent-runtime = "^0.4.0"
sqlmodel = "^0.0.8"
asyncpg = "^0.27.0"


[tool.poetry.group.dev.dependencies]
autopep8 = "^2.0.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
